# sm-pipeline-pipecd

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml  run_pipeline.py
.devcontainer/: devcontainer.json  post-start.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: distribute_pipeline.yml
nest/: pyproject.toml
pipecd/: app.pipecd.yaml  pipeline-config.yaml  taskdef.yaml
pipeline/: Dockerfile  config.yml  dag.py  requirements.txt
pipeline/steps/: __init__.py  data_preprocess.py  data_validate.py  model_evaluate.py  model_train.py  model_tune.py
pkg/aws/: sagemaker.py
pkg/config/: app.py  base.py  pipeline.py
pkg/const/: aws.py
pkg/log/: logger.py
