[project]
name = "sm-pipeline-pipecd"
version = "0.2.0"
description = "Add your description here"
authors = [{ name = "cuongvd23", email = "johnvu23.vn@gmail.com" }]
urls = { repository = "https://github.com/cuongvd23/sagemaker-pipeline" }
keywords = ["aws", "sagemaker", "pipeline", "mlops", "pipecd", "cicd"]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "uv==0.8.12",
  "boto3==1.40.13",
  "colorlog==6.9.0",
  "python-dotenv==1.1.1",
  "pyyaml==6.0.2",
  "sagemaker==2.250.0",
  "typer==0.16.1",
]

[dependency-groups]
typing = [
  "mypy==1.17.1",
  "boto3-stubs==1.40.13",
  "types-pyyaml==6.0.12.20250809",
  "mypy-boto3-sagemaker==1.40.12",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
extend-exclude = ["*.ipynb"]
line-length = 90
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "ICN", # flake8-import-conventions
  "Q",   # flake8-quotes
  "SIM", # flake8-simplify
  "TID", # flake8-tidy-imports
  "YTT", # flake8-2020
  "G",   # flake8-logging-format
  "UP",  # pyupgrade
]
ignore = [
  "E501", # line too long
  "B008", # do not perform function calls in argument defaults
  "C901", # too complex
  "G004", # Logging statement uses f-string
]
extend-select = [
  "RUF200", # failed to parse pyproject.toml
]
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-line-length = 60
docstring-code-format = true


[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
exclude = []
implicit_reexport = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
explicit_package_bases = true
disallow_untyped_defs = true
disallow_untyped_calls = false
follow_imports = "normal"

[[tool.mypy.overrides]]
module = [
  "pipeline.*", # ignore mypy on sagemaker
]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["sagemaker.*"]
ignore_missing_imports = true
ignore_errors = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
