[project]
name = "sm-pipeline-pipecd"
version = "0.2.0"
description = "Add your description here"
authors = [{ name = "cuongvd23", email = "johnvu23.vn@gmail.com" }]
urls = { repository = "https://github.com/cuongvd23/sagemaker-pipeline" }
keywords = ["aws", "sagemaker", "pipeline", "mlops", "pipecd", "cicd"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "uv==0.7.21",
  "colorlog==6.9.0",
  "python-dotenv==1.1.1",
  "pyyaml==6.0.2",
  "sagemaker==2.248.0",
  "typer==0.16.0",
]

[project.optional-dependencies]
typing = [
  "mypy==1.17.0",
  "boto3-stubs==1.39.4",
  "types-pyyaml==6.0.12.20250516",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
